--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,12 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Path aliases */
-    "ignoreDeprecations": "6.0",
+    "ignoreDeprecations": "5.0",
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
-    ,
-    "types": ["vite/client", "node"]
+    },
+    "types": ["vite/client"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
